# robust_ds_code

./: README.md  pyproject.toml
src/postgrad_class/: __about__.py  main.py
src/postgrad_class/conf/: config.py  config.yaml
src/postgrad_class/conf/model/: linear.yaml  neural.yaml
src/postgrad_class/model/: base.py  linear.py  neural.py
src/postgrad_class/notebooks/: example.ipynb  example.py
tests/: __init__.py  test_linear_model.py
